--- a/src/Pages/Home/Banner/BannerItem.css
+++ b/src/Pages/Home/Banner/BannerItem.css
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   display: inline-block;
+  border-radius: 12px;
   background: linear-gradient(
     to right,
     #151515 0%,
